Fix massive space on homepage on ie11

--- a/web/app/themes/radcliffe/style.css
+++ b/web/app/themes/radcliffe/style.css
@@ -1688,6 +1688,7 @@ li.comment {
 
 .home-hero img {
   border-radius: 50%;
+  width: 300px; /* Prevents IE11 bug - whereby the image affects the parent layout. */
 }
 
 .home-hero figcaption {
